[package]
name = "vizia-quickflex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vizia = {git = "https://github.com/vizia/vizia", rev = "8b62269ec49698ff671dcaab71eb69672544fb46" }
roxmltree = "0.14.1"
